samples/_failures_safe/1761313386_717412_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22b673ce.c: In function ‘main’:
./samples/SAFE/__tmp_22b673ce.c:172:12: error: missing terminating " character
  172 |     printf("Tokens
      |            ^~~~~~~
./samples/SAFE/__tmp_22b673ce.c:172:5: error: expected expression at end of input
  172 |     printf("Tokens
      |     ^~~~~~
./samples/SAFE/__tmp_22b673ce.c:172:5: error: expected declaration or statement at end of input
